# go-bazel-sample

generate-build-files/: BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-generate-build-files  bazel-out  bazel-testlogs
generate-build-files/app1/: go.mod
generate-build-files/app1/cmd/: BUILD.bazel  main.go
getting-started/: BUILD.bazel  WORKSPACE  bazel-bin  bazel-getting-started  bazel-out  bazel-testlogs
getting-started/app1/cmd/: main.go
goland/: BUILD.bazel  WORKSPACE  bazel-bin  bazel-goland  bazel-out  bazel-testlogs
goland/app1/: go.mod
goland/app1/cmd/: BUILD.bazel  main.go
goland/lib/example/: BUILD.bazel  client.go  go.mod
multiple-directories/: BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-multiple-directories  bazel-out  bazel-testlogs
multiple-directories/app1/: go.mod
multiple-directories/app1/cmd/: BUILD.bazel  main.go
multiple-directories/lib/example/: BUILD.bazel  client.go  go.mod
