load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/kaito2/go-bazel-sample/goland/app1/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/example",
        "@com_github_rs_xid//:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
