load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/kaito2/go-bazel-sample/multiple-directories/app1/cmd",
    visibility = ["//visibility:private"],
    deps = ["//lib/example"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
